# 66666

./: .env  fixtures.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py
blog/templates/blog/: base.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/data/: products.json
catalog/management/commands/: populate_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_create_date_alter_product_update_date.py  0003_alter_category_options_alter_product_options_and_more.py  0004_alter_product_create_date_alter_product_update_date.py  0005_product_user_alter_product_create_date_and_more.py  0006_product_is_published.py
catalog/templates/catalog/: contact.html  home.html  layout.html  product_detail.html  product_form.html  version_form.html
catalog/templatetags/: custom_filters.py
config/: settings.py  urls.py
users/: apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_is_active.py
users/templates/registration/: logout.html  password_reset_form.html
